<resources>
    <string name="app_name">Gallery</string>

    <string name="tool_bar_others_btn">Others</string>
    <string name="tool_bar_back_btn">Back</string>

    <string name="album_name">galleyname</string>
    <string name="albums_title">Albums</string>
    <string name="recent_image_name">Recent</string>
    <string name="image_message_title">Message</string>
    <string name="image_message_key">image_message</string>
    <string name="images_list_key">images_list</string>

    <string name="image_message_id">ID:      </string>
    <string name="image_message_name">图片名:  </string>
    <string name="image_message_file">文件夹名:</string>
    <string name="image_message_path">图片路径:</string>
    <string name="image_message_date">创建日期:</string>

    <string name="big_image">small_image_to_big_image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
