<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/tool_bar_background"
        android:elevation="8dp">
        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_btn_message"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@color/color_white"
                android:text="@string/tool_bar_back_btn"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:gravity="center|left"
            android:text="@string/image_message_title"
            android:textColor="@color/color_text_black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp">
        <TextView
            android:text="@string/image_message_id"
            android:textColor="@color/color_text_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_image_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp">
        <TextView
            android:text="@string/image_message_name"
            android:textColor="@color/color_text_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_image_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp">
        <TextView
            android:text="@string/image_message_file"
            android:textColor="@color/color_text_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_image_file"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp">
        <TextView
            android:text="@string/image_message_path"
            android:textColor="@color/color_text_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_image_path"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp">
        <TextView
            android:text="@string/image_message_date"
            android:textColor="@color/color_text_black"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_image_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"/>
    </LinearLayout>

</LinearLayout>